--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.18.0",
+    "@astrojs/rss": "^4.0.11",
+    "@fontsource-variable/inter": "^5.2.5",
     "astro": "^5.2.3"
   }
 }
