--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@astrojs/rss": "^4.0.11",
     "@fontsource-variable/inter": "^5.2.5",
-    "astro": "^5.2.3"
+    "astro": "^5.2.3",
+    "swiper": "^11.2.6"
   }
 }
